--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "vue",
-  "version": "1.2.0",
+  "name": "juicy",
+  "version": "2.2.0",
   "description": "A Vue.js admin",
-  "author": "mao",
+  "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build:prod": "cross-env NODE_ENV=production node build/build.js",
-    "build:sit": "cross-env NODE_ENV=sit node build/build.js",
-    "build:sit-preview": "cross-env NODE_ENV=sit npm_config_preview=true  npm_config_report=true node build/build.js",
+    "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
+    "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
+    "build:sit-preview": "cross-env NODE_ENV=production env_config=sit npm_config_preview=true  npm_config_report=true node build/build.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "axios": "0.16.2",
-    "babel-polyfill": "^6.26.0",
+    "clipboard": "1.7.1",
     "codemirror": "5.26.0",
     "dropzone": "5.1.0",
-    "echarts": "3.6.2",
+    "echarts": "3.7.2",
     "element-ui": "1.4.2",
     "file-saver": "1.3.3",
-    "jquery": "^3.2.1",
     "js-cookie": "2.1.4",
     "jsonlint": "1.6.2",
     "mockjs": "1.0.1-beta3",
@@ -34,16 +33,17 @@
     "vue-count-to": "1.0.5",
     "vue-multiselect": "2.0.2",
     "vue-router": "2.7.0",
+    "vue-splitpane": "^1.0.0",
     "vuedraggable": "2.14.1",
     "vuex": "2.3.1",
-    "xlsx": "^0.10.8"
+    "xlsx": "^0.10.8",
+    "jszip": "^3.1.4"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-stage-2": "6.24.1",
@@ -68,8 +68,6 @@
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
     "jquery": "^3.2.1",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
     "node-sass": "^4.5.0",
     "opn": "4.0.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
@@ -80,8 +78,9 @@
     "script-loader": "0.7.0",
     "semver": "5.3.0",
     "style-loader": "0.17.0",
+    "svg-sprite-loader": "3.2.4",
     "url-loader": "0.5.8",
-    "vue-loader": "12.2.1",
+    "vue-loader": "13.0.4",
     "vue-style-loader": "3.0.1",
     "vue-template-compiler": "2.4.2",
     "webpack": "2.6.1",
@@ -94,7 +93,7 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserlist": [
+  "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
